strategic-deal-assurance/force-app/main/default/objects/Strategic_Deal_Evaluation__c/Strategic_Deal_Evaluation__c.object-meta.xml
<CustomObject>
    <description>BR-STRATEGIC-DISCOUNT: synthetic evaluation evidence. No normal-user edit/delete grants; sharing and writer supplied in later milestones.</description>
    <label>Strategic Deal Evaluation</label>
    <nameField>
        <displayFormat>SDE-{000000}</displayFormat>
        <label>Evaluation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Strategic Deal Evaluations</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>