strategic-deal-assurance/force-app/main/default/objects/Strategic_Deal_Evaluation__c/fields/Amount_INR__c.field-meta.xml
<CustomField>
    <fullName>Amount_INR__c</fullName>
    <description>BR-STRATEGIC-DISCOUNT: input amount in USD. Legacy INR API identifier retained for compatibility; no currency conversion.</description>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
    <label>Amount USD</label>
</CustomField>