strategic-deal-assurance/force-app/main/default/objects/Strategic_Deal_Evaluation__c/fields/Approval_Required__c.field-meta.xml
<CustomField>
    <fullName>Approval_Required__c</fullName>
    <description>BR-STRATEGIC-DISCOUNT: Approval Required.</description>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
    <label>Approval Required</label>
</CustomField>