strategic-deal-assurance/force-app/main/default/objects/Strategic_Deal_Evaluation__c/fields/Approver_Present__c.field-meta.xml
<CustomField>
    <fullName>Approver_Present__c</fullName>
    <description>BR-STRATEGIC-DISCOUNT: Approver Present.</description>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
    <label>Approver Present</label>
</CustomField>