strategic-deal-assurance/force-app/main/default/objects/Strategic_Deal_Evaluation__c/fields/Correlation_Id__c.field-meta.xml
<CustomField>
    <fullName>Correlation_Id__c</fullName>
    <description>BR-STRATEGIC-DISCOUNT: Correlation ID.</description>
    <externalId>true</externalId>
    <length>80</length>
    <type>Text</type>
    <label>Correlation ID</label>
</CustomField>