strategic-deal-assurance/force-app/main/default/objects/Strategic_Deal_Evaluation__c/fields/Discount_Percent__c.field-meta.xml
<CustomField>
    <fullName>Discount_Percent__c</fullName>
    <description>BR-STRATEGIC-DISCOUNT: Discount Percent.</description>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
    <label>Discount Percent</label>
</CustomField>