strategic-deal-assurance/force-app/main/default/objects/Strategic_Deal_Evaluation__c/fields/Evaluated_At__c.field-meta.xml
<CustomField>
    <fullName>Evaluated_At__c</fullName>
    <description>BR-STRATEGIC-DISCOUNT: Evaluated At.</description>
    <type>DateTime</type>
    <label>Evaluated At</label>
</CustomField>