strategic-deal-assurance/force-app/main/default/objects/Strategic_Deal_Evaluation__c/fields/Evaluation_Source__c.field-meta.xml
<CustomField>
    <fullName>Evaluation_Source__c</fullName>
    <description>BR-STRATEGIC-DISCOUNT: Evaluation Source.</description>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Flow</fullName><default>true</default><label>Flow</label></value>
            <value><fullName>REST</fullName><default>false</default><label>REST</label></value>
            <value><fullName>UI</fullName><default>false</default><label>UI</label></value>
            <value><fullName>Apex Test</fullName><default>false</default><label>Apex Test</label></value>
            <value><fullName>Seed</fullName><default>false</default><label>Seed</label></value>
        </valueSetDefinition>
    </valueSet>
    <label>Evaluation Source</label>
</CustomField>