strategic-deal-assurance/force-app/main/default/objects/Strategic_Deal_Evaluation__c/fields/Input_Hash__c.field-meta.xml
<CustomField>
    <fullName>Input_Hash__c</fullName>
    <description>BR-STRATEGIC-DISCOUNT: Input Hash.</description>
    <length>64</length>
    <type>Text</type>
    <label>Input Hash</label>
</CustomField>