strategic-deal-assurance/force-app/main/default/objects/Strategic_Deal_Evaluation__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <description>BR-STRATEGIC-DISCOUNT: Opportunity.</description>
    <deleteConstraint>Restrict</deleteConstraint>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Strategic Deal Evaluations</relationshipLabel>
    <relationshipName>Strategic_Deal_Evaluations</relationshipName>
    <required>true</required>
    <type>Lookup</type>
    <label>Opportunity</label>
</CustomField>