strategic-deal-assurance/force-app/main/default/objects/Strategic_Deal_Evaluation__c/fields/Outcome__c.field-meta.xml
<CustomField>
    <fullName>Outcome__c</fullName>
    <description>BR-STRATEGIC-DISCOUNT: Outcome.</description>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Not Required</fullName><default>true</default><label>Not Required</label></value>
            <value><fullName>Pending Regional VP</fullName><default>false</default><label>Pending Regional VP</label></value>
            <value><fullName>Approved</fullName><default>false</default><label>Approved</label></value>
            <value><fullName>Rejected</fullName><default>false</default><label>Rejected</label></value>
            <value><fullName>Configuration Error</fullName><default>false</default><label>Configuration Error</label></value>
        </valueSetDefinition>
    </valueSet>
    <label>Outcome</label>
</CustomField>