strategic-deal-assurance/force-app/main/default/objects/Strategic_Deal_Evaluation__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <description>BR-STRATEGIC-DISCOUNT: Reason.</description>
    <length>32768</length>
    <type>LongTextArea</type>
    <label>Reason</label>
</CustomField>