strategic-deal-assurance/force-app/main/default/objects/Strategic_Deal_Evaluation__c/fields/Strategic_Deal__c.field-meta.xml
<CustomField>
    <fullName>Strategic_Deal__c</fullName>
    <description>BR-STRATEGIC-DISCOUNT: Strategic Deal.</description>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
    <label>Strategic Deal</label>
</CustomField>